Adjust S6-S8 config files for .mov samples

--- a/configs/video_denoise/S6.toml
+++ b/configs/video_denoise/S6.toml
@@ -6,7 +6,7 @@ SAMPLES_DIRECTORY = "data_for_denoise"
 N2V_MODEL_NAME = "n2v_64x64_05_256_5"
 N2V_MODEL_DIR = "models"
 SAMPLE_NAME = "Mov_S6"
-SAMPLE_EXTENSION = "avi"
+SAMPLE_EXTENSION = "mov"
 
 SCALE_FACTOR = 2
 MEAN_DATA_SAMPLE_RATE = 30
