--- a/requirements.txt
+++ b/requirements.txt
@@ -1,62 +1,8 @@
-absl-py==0.13.0
-astunparse==1.6.3
-cachetools==4.2.2
-certifi==2020.6.20
-charset-normalizer==2.0.6
-colorama==0.4.4
-csbdeep==0.6.3
-cycler==0.10.0
-flatbuffers==1.12
-gast==0.3.3
-google-auth==1.35.0
-google-auth-oauthlib==0.4.6
-google-pasta==0.2.0
-grpcio==1.32.0
-h5py==2.10.0
-idna==3.2
-imagecodecs==2021.8.26
-importlib-metadata==4.8.1
-Keras==2.3.1
-Keras-Applications==1.0.8
-Keras-Preprocessing==1.1.2
-kiwisolver==1.3.2
-Markdown==3.3.4
-matplotlib==3.4.3
-n2v==0.3.1
-numpy==1.19.5
-oauthlib==3.1.1
-opt-einsum==3.3.0
-packaging==21.0
-Pillow==8.3.2
-protobuf==3.18.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pyparsing==2.4.7
-python-dateutil==2.8.2
-PyYAML==5.4.1
-requests==2.26.0
-requests-oauthlib==1.3.0
-rsa==4.7.2
-ruamel.yaml==0.17.16
-ruamel.yaml.clib==0.2.6
-scipy==1.7.1
-six==1.15.0
-tensorboard==2.6.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.0
-tensorflow==2.4.0
-tensorflow-estimator==2.4.0
-termcolor==1.1.0
-tifffile==2021.8.30
-tqdm==4.62.2
-typing-extensions==3.7.4.3
-urllib3==1.26.6
-Werkzeug==2.0.1
-wincertstore==0.2
-wrapt==1.12.1
-zipp==3.5.0
-opencv-python==4.5.3.56
-scikit-video==1.1.11
-pandas==1.3.2
 tomli==2.0.1
-openpyxl==3.0.10
+opencv-python==4.7.0.72
+matplotlib==3.5.3
+scikit-video==1.1.11
+numpy~=1.21.6
+scipy~=1.7.3
+pandas~=1.3.5
+openpyxl==3.1.2
