--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 opencv-python==4.7.0.72
 matplotlib==3.5.3
 scikit-video==1.1.11
-numpy~=1.21.6
+numpy>=1.21.6
 scipy~=1.7.3
 pandas~=1.3.5
 tqdm~=4.65.0
